examples/invalid/invalid4.vbr
***/
Abortar por usar ==
    /***
track moderato() {
    n: quarter|
    str; Melody<half> <-> "=="|
    |> ("Esto deberia fallar por culpa del ")|
    |> (str)|
    |> ('\n')|
    @(n)|
    |> (n%11 == 10)|
}